Loc vc completed

--- a/SalahAndDua/Features/LocationPermission/View/Location.storyboard
+++ b/SalahAndDua/Features/LocationPermission/View/Location.storyboard
@@ -78,7 +78,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
-                                            <action selector="noAnotherTime:" destination="CfV-su-Kbt" eventType="touchUpInside" id="hoZ-Gh-ZBW"/>
+                                            <action selector="noAnotherTime:" destination="CfV-su-Kbt" eventType="touchUpInside" id="ZQl-v1-zEt"/>
                                         </connections>
                                     </button>
                                 </subviews>
